[package]
name = "bt_yaml_utils"
version = "0.1.5"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic YAML reader operations"
keywords = ["YAML","YML","file","read"]
categories = ["value-formatting", "development-tools", "filesystem","config"]
repository = "https://github.com/bachuetech/bt_yaml_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_yaml_utils"
license = "GPL-3.0-only"

[dependencies]
bt_file_utils = "0.1.2"
bt_logger = "0.2.3"
yaml-rust2 = "0.10.1"
